# nvl

./: .gitignore  CMakeLists.txt  LICENSE
app/: CMakeLists.txt
app/a0/: A0.cpp
app/a0/tool/: BlockBreaker.cpp  BlockBreaker.h  BlockCreator.cpp  BlockCreator.h  BlockRemover.cpp  BlockRemover.h  ToolBelt.h
app/a1/: A1.cpp
app/a2/: A2.cpp
app/a2/action/: Brake.cpp  Brake.h  Dig.cpp  Dig.h  Jump.cpp  Jump.h  Move.cpp  Move.h  PlayerAction.h  Strafe.cpp  Strafe.h  Teleport.cpp  Teleport.h
app/a2/entity/: Player.cpp  Player.h
app/a2/macros/: Literals.h
app/a2/ui/: DeathScreen.cpp  DeathScreen.h  DebugScreen.cpp  DebugScreen.h  PauseScreen.cpp  PauseScreen.h  PlayerControls.cpp  PlayerControls.h
app/a2/world/: WorldA2.cpp  WorldA2.h
cmake/: FindGoogleTest.cmake  Findraylib.cmake
nvl/: App.cpp  G0.cpp  G1.cpp
nvl/actor/: Actor.cpp  Actor.h  Part.h  Status.cpp  Status.h  TickResult.h
nvl/data/: BRTree.h  Counter.h  EquivalentSets.h  HasEquality.h  Iterator.h  IteratorPair.h  List.h  Map.h  Maybe.h  Once.h  PointerHash.h  RTree.h  Range.h  Ref.h  Set.h  SetVector.h  SipHash.cpp  SipHash.h  Tensor.cpp  Tensor.h  UnionFind.h  WalkResult.h
nvl/draw/: Color.h  Draw.h  Window.cpp  Window.h
nvl/entity/: Block.h  Entity.h
nvl/enum/: Dir.h
nvl/file/: Lines.cpp  Lines.h
nvl/geo/: At.h  BRTree.h  Box.h  Dir.h  Edge.h  Face.h  HasBBox.h  Intersect.h  Line.h  Orthants.h  Polar.h  Pos.h  RBox.h  RTree.h  Rel.h  Triangle.h  Tuple.h  Util.h  Vec.h  View.h  Volume.h  VolumeLike.h
nvl/io/: HasPrint.h  IO.h
nvl/macros/: Abstract.h  Aliases.h  Assert.h  Expand.h  Hot.h  Implicit.h  Pure.h  ReturnIf.h  SIMD.h  Unreachable.h  Unroll.h
nvl/material/: Bulwark.h  Material.cpp  Material.h  TestMaterial.h
nvl/math/: Bitwise.cpp  Bitwise.h  Combinations.h  Deg.cpp  Deg.h  Distribution.h  FastTrig.cpp  FastTrig.h  Grid.h  Plane.h  Random.h  Rotation.h  Trig.h
nvl/message/: Created.h  Destroy.h  Hit.h  Message.cpp  Message.h  Notify.h
nvl/reflect/: Backtrace.cpp  Backtrace.h  Castable.h  CastablePtr.h  CastableShared.h  Casting.h  ClassTag.cpp  ClassTag.h  PrimitiveTypes.h
nvl/test/: Expect.h  Fuzzing.h  LabeledBox.h  NullWindow.h  TensorWindow.cpp  TensorWindow.h  TestWindow.cpp  TestWindow.h
nvl/time/: Clock.h  Duration.cpp  Duration.h  TimeScale.h
nvl/tool/: BlockBreaker.h  BlockCreator.h  BlockRemover.h  Tool.h  ToolBelt.h
nvl/traits/: GetBox.h  GetID.h  HasBBox.h  HasBox.h  HasDereference.h  HasID.h
nvl/ui/: Color.cpp  Color.h  GlowEffect.h  InputEvent.h  Key.cpp  Key.h  Mouse.cpp  Mouse.h  RayWindow.cpp  RayWindow.h  Screen.cpp  Screen.h  Scroll.h  UserInterface.cpp  UserInterface.h  ViewOffset.cpp  ViewOffset.h  Window.cpp  Window.h
nvl/world/: World.h
src/nox/: CMakeLists.txt
src/nox/nox/: Nox.cpp  Nox.h
src/nox/nox/alg/: Filters.h
src/nox/nox/data/: List.h  Map.h  Maybe.h  Once.h  RTree.h  Range.h  Ref.h  Set.h  SetVector.h  SipHash.cpp  SipHash.h
src/nox/nox/enum/: Dir.h
src/nox/nox/geo/: Box.h  Edge.h  Pos.h
src/nox/nox/macros/: Aliases.h  Assert.h  Implicit.h  Inline.h  Pure.h  ReturnIf.h
src/nox/nox/math/: Bitwise.h  Clamping.h
src/nox/nox/traits/: GetBox.h  GetID.h
src/nvl/: CMakeLists.txt
src/nvl/nvl/data/: List.h  SipHash.cpp
src/nvl/nvl/macros/: Aliases.h  Assert.h  Inline.h  ReturnIf.h
src/nvl/nvl/math/: Clamping.h
test/: CMakeLists.txt
test/actor/: CMakeLists.txt  TestActor.cpp
test/data/: CMakeLists.txt  TestBRTree.cpp  TestCounter.cpp  TestEquivalentSets.cpp  TestRTree.cpp  TestUnionFind.cpp
test/entity/: CMakeLists.txt  TestBlock.cpp  TestEntity.cpp
test/geo/: CMakeLists.txt  TestBRTree.cpp  TestBox.cpp  TestLine.cpp  TestPos.cpp  TestProfiling.cpp  TestRBox.cpp  TestRTree.cpp
test/math/: CMakeLists.txt  TestDeg.cpp  TestDistribution.cpp  TestFastTrig.cpp  TestGrid.cpp  TestTrig.cpp
test/nox/: CMakeLists.txt
test/nox/data/: CMakeLists.txt  TestRTree.cpp
test/nox/geo/: CMakeLists.txt  TestBox.cpp  TestPos.cpp
test/nvl/: CMakeLists.txt
test/nvl/data/: CMakeLists.txt  TestRTree.cpp
test/nvl/geo/: CMakeLists.txt  TestPos.cpp
test/reflect/: CMakeLists.txt  TestBacktrace.cpp  TestCasting.cpp  TestClassTag.cpp  TestPrimitiveTypes.cpp
test/ui/: CMakeLists.txt  TestViewOffset.cpp  TestWindow.cpp
test/util/: Fuzzing.h  LabeledBox.h
test/world/: CMakeLists.txt  TestWorld.cpp
